# LunarPlayer

./: .gitignore  CMakeLists.txt
assets/: app.manifest  resource.rc
cmake/: copy_if_exists.cmake  verify_dll.cmake
docs/: Architecture_v1.md  Competitor_Analysis.md  Feature_Priority.md  Lunar_Differentiators.md  Lunar_Player_Vision.md  Phase2_Architecture.md  Technical_Decisions.md  User_Personas.md  archive_Phase2_GPU_Rendering.md
icons/: icons.qrc
scripts/: test-playback.ps1
src/: main.cpp
src/audio/: AudioBackendFactory.cpp  AudioBackendFactory.h  AudioChannelRouter.cpp  AudioChannelRouter.h  AudioClock.h  AudioDSP.h  AudioDeviceManager.cpp  AudioDeviceManager.h  AudioEngine.cpp  AudioEngine.h  AudioOutput.h  AudioResampler.h  AudioRingBuffer.h  AudioStreamDecoder.h  IAudioBackend.h  WasapiExclusiveBackend.cpp  WasapiExclusiveBackend.h  WasapiSharedBackend.cpp  WasapiSharedBackend.h  WaveOutBackend.cpp  WaveOutBackend.h
src/decoder/: AudioDecoder.h  DecodeThread.cpp  DecodeThread.h  DecoderInfo.h  DecoderManager.cpp  DecoderManager.h  HWAccel.cpp  HWAccel.h  ThumbnailWorker.cpp  ThumbnailWorker.h
src/network/: NetworkBuffer.cpp  NetworkBuffer.h  NetworkMediaSession.cpp  NetworkMediaSession.h
src/plugin/: PluginAPI.h  PluginLoader.cpp  PluginLoader.h
src/renderer/: CPURenderer.cpp  CPURenderer.h  CapabilityRenderer.cpp  CapabilityRenderer.h  ColorManager.cpp  ColorManager.h  CropAnalyzer.cpp  CropAnalyzer.h  FrameInfo.cpp  FrameInfo.h  GLVideoRenderer.cpp  GLVideoRenderer.h  GPUTextureCache.cpp  GPUTextureCache.h  Renderer.h  RendererFactory.cpp  ShaderManager.cpp  ShaderManager.h  TextureUploader.cpp  TextureUploader.h  YUVVideoRenderer.cpp  YUVVideoRenderer.h
src/subtitles/: AssAnimationEngine.cpp  AssAnimationEngine.h  AssClippingEngine.cpp  AssClippingEngine.h  AssOverrideParser.cpp  AssOverrideParser.h  AssParser.cpp  AssParser.h  AssRenderCache.cpp  AssRenderCache.h  AssTypes.h  ExternalSubtitleLoader.cpp  ExternalSubtitleLoader.h  KaraokeTimeline.cpp  KaraokeTimeline.h  SubtitleCache.cpp  SubtitleCache.h  SubtitleDecoder.cpp  SubtitleDecoder.h  SubtitleFrame.h  SubtitleManager.cpp  SubtitleManager.h  SubtitleRenderer.cpp  SubtitleRenderer.h  SubtitleSurface.cpp  SubtitleSurface.h
src/ui/: CompareController.cpp  CompareController.h  CompareWidget.cpp  CompareWidget.h  FullscreenCommandPanel.cpp  FullscreenCommandPanel.h  GradientOverlay.cpp  GradientOverlay.h  HoverPreviewWidget.h  Icons.h  MainWindow.cpp  MainWindow.h  MediaInfo.h  MediaInfoDialog.cpp  MediaInfoDialog.h  SeekSlider.h  SeekStressTest.h  SequenceFrameCache.cpp  SequenceFrameCache.h  StreamingOverlay.cpp  StreamingOverlay.h  ThumbnailCache.h  VideoWidget.cpp  VideoWidget.h
src/update/: DownloadManager.cpp  DownloadManager.h  GitHubUpdateProvider.cpp  GitHubUpdateProvider.h  IUpdateProvider.cpp  IUpdateProvider.h  LunarUpdateHelper.cpp  PackageVerifier.cpp  PackageVerifier.h  SemVer.h  UpdateDialog.cpp  UpdateDialog.h  UpdateInstaller.cpp  UpdateInstaller.h  UpdateManager.cpp  UpdateManager.h
src_bak_before_borderless/audio/: AudioOutput.cpp  AudioOutput.h
src_bak_before_borderless/decoder/: AudioDecoder.cpp  DecoderInfo.h  HWAccel.cpp  HWAccel.h
src_bak_before_borderless/renderer/: CPURenderer.cpp  GLVideoRenderer.h  Renderer.h  RendererFactory.h  YUVVideoRenderer.cpp  YUVVideoRenderer.h
src_bak_before_borderless/ui/: HoverPreviewWidget.cpp  MainWindow.cpp  MainWindow.h  MediaInfo.h  MediaInfoDialog.cpp  SeekSlider.h  ThumbnailCache.cpp  VideoWidget.cpp  VideoWidget.h
tests/: audio_test_suite.ps1  test_acceptance.cpp  test_benchmark.cpp  test_context_menu.cpp  test_decode_bench.cpp  test_ffmpeg.cpp  test_gpu_prove.cpp  test_gpu_prove_yuv.cpp  test_human_qa.cpp  test_manual_qa_logger.cpp  test_mediasession.cpp  test_performance_report.cpp  test_phase1.cpp  test_phase13_runtime.cpp  test_phase14a_zoom_aspect_crop.cpp  test_phase3a_validation.cpp  test_phase3b_audio.cpp  test_phase6b.cpp  test_phase6c.cpp  test_phase6d.cpp  test_phase7a.cpp  test_phase7a_runtime.cpp  test_phase7b.cpp  test_phase7b_e2e.cpp  test_phase7b_runtime.cpp  test_phase7c.cpp  test_phase7c_integration.cpp  test_phase7c_runtime.cpp  test_phase8_12_integration.cpp  test_playback_smoke.cpp  test_plugin_loading.cpp  test_popup_menu.cpp  test_seekslider.cpp  test_stress_playback.cpp  test_update_e2e.cpp  test_validation_suite.cpp
tests/update/: LocalUpdateServer.cpp  LocalUpdateServer.h
